force-app/main/default/objects/Contact_PE__e/Contact_PE__e.object-meta.xml
<CustomObject>
    <description>Integration SF -&gt; Grace
ZRD
SF-833</description>
    <label>Contact PE</label>
    <pluralLabel>Contact PEs</pluralLabel>
</CustomObject>