force-app/main/default/objects/Contact_PE__e/fields/Confirmation_Date_no_E_Mail_Entry__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Date_no_E_Mail_Entry__c</fullName>
    <description>1. Integration relevant (GRACE)
2. ZRD
3. SF-833</description>
    <label>Confirmation Date no E-Mail Entry</label>
    <type>DateTime</type>
</CustomField>