force-app/main/default/objects/Contact_PE__e/fields/Created_On__c.field-meta.xml
<CustomField>
    <fullName>Created_On__c</fullName>
    <description>1. Integration relevant (GRACE)
2. ZRD
3. SF-833</description>
    <label>Created On</label>
    <type>DateTime</type>
</CustomField>