force-app/main/default/objects/Contact_PE__e/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <description>1. Integration relevant (GRACE)
2. ZRD
3. SF-833 // Account Customer Number, set by Flow</description>
    <label>Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>