force-app/main/default/objects/Contact_PE__e/fields/Deletion_Code__c.field-meta.xml
<CustomField>
    <fullName>Deletion_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <description>1. Integration relevant (GRACE)
2. ZRD
3. SF-833</description>
    <label>Deletion Code</label>
    <type>Checkbox</type>
</CustomField>