force-app/main/default/objects/Contact_PE__e/fields/Expertise_Interest__c.field-meta.xml
<CustomField>
    <fullName>Expertise_Interest__c</fullName>
    <description>1. Integration relevant (GRACE)
2. ZRD
3. SF-833</description>
    <label>Expertise Interest</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>