force-app/main/default/objects/Contact_PE__e/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>1. Integration relevant (GRACE)
2. ZRD
3. SF-833</description>
    <label>Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>