force-app/main/default/objects/Contact_PE__e/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <description>1. Integration relevant (GRACE)
2. ZRD
3. SF-833</description>
    <label>Mobile Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>