force-app/main/default/objects/Contact_PE__e/fields/Modified_by_User__c.field-meta.xml
<CustomField>
    <fullName>Modified_by_User__c</fullName>
    <description>1. Integration relevant (GRACE)
2. ZRD
3. SF-833</description>
    <label>Modified by User</label>
    <length>15</length>
    <type>Text</type>
</CustomField>