force-app/main/default/objects/Contact_PE__e/fields/Salesforce_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_ID__c</fullName>
    <description>1. Integration relevant (GRACE)
2. ZRD
3. SF-833</description>
    <label>Salesforce ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>