force-app/main/default/objects/Contact_PE__e/fields/Save_without_Email__c.field-meta.xml
<CustomField>
    <fullName>Save_without_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>1. Integration relevant (GRACE)
2. ZRD
3. SF-833</description>
    <label>Save without Email</label>
    <type>Checkbox</type>
</CustomField>