force-app/main/default/objects/Contact_PE__e/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>1. Integration relevant (GRACE)
2. ZRD
3. SF-833</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>