force-app/main/default/objects/Contact_PE__e/fields/Updated__c.field-meta.xml
<CustomField>
    <fullName>Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>1. Integration relevant (GRACE)
2. ZRD
3. SF-833 // Set via Flow to indicate, whether a Contact has been inserted or updated.</description>
    <label>Updated</label>
    <type>Checkbox</type>
</CustomField>